--- a/www/index.html
+++ b/www/index.html
@@ -5,61 +5,13 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 </head>
-
-
-<style>
-    body {
-        font-family: "Lato", sans-serif;
-    }
-
-    .sidenav {
-        height: 100%;
-        width: 0;
-        position: fixed;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        background-color: #111;
-        overflow-x: hidden;
-        transition: 0.5s;
-        padding-top: 60px;
-    }
-
-    .sidenav a {
-        padding: 8px 8px 8px 32px;
-        text-decoration: none;
-        font-size: 25px;
-        color: #818181;
-        display: block;
-        transition: 0.3s;
-    }
-
-    .sidenav a:hover, .offcanvas a:focus {
-        color: #f1f1f1;
-    }
-
-    .sidenav .closebtn {
-        position: absolute;
-        top: 0;
-        right: 25px;
-        font-size: 36px;
-        margin-left: 50px;
-    }
-
-    @media screen and (max-height: 450px) {
-        .sidenav {
-            padding-top: 15px;
-        }
-
-        .sidenav a {
-            font-size: 18px;
-        }
-    }
-</style>
+<link rel="stylesheet" href="css/style.css">
 <script src="lib/jquery.js"></script>
 <script src="lib/bigslide.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular.js">
-</script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular.js"></script>
+
+
+
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
       integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
@@ -95,23 +47,6 @@
             alert("고경준 천재님이십니다sdlkfsldkflksdflk");
         });
 
-        /*  $.ajax({
-              url: 'http://localhost:8080/test/getList',
-              headers: {
-                  'Content-Type': 'application/x-www-form-urlencoded'
-              },
-              type: "get", /!* or type:"GET" or type:"PUT" *!/
-              crossOrigin: true,
-              data: {
-              },
-              success: function (result) {
-                  console.log(result);
-              },
-              error: function () {
-                  console.log("error");
-              }
-          });*/
-
 
     });
 </script>
@@ -127,15 +62,6 @@
         });
     });
 
-   /* $(document).ready(function () {
-
-
-        $(".trOne").on("click", function () {
-            alert("고경준 천재님이십니다^^");
-        });
-    });
-
-*/
     $(document).on("click", ".trOne", function() {
         //alert($(this).text());
     });
